--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
   },
   "homepage": "https://github.com/shuding/nextra-docs-template#readme",
   "dependencies": {
-    "next": "^14.0.0",
-    "nextra": "latest",
-    "nextra-theme-docs": "latest",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "next": "14.2.11",
+    "nextra": "2.13.4",
+    "nextra-theme-docs": "2.13.4",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "@types/node": "20.16.5",
-    "typescript": "^5.0.0"
+    "@types/node": "22.5.5",
+    "typescript": "5.6.2"
   },
   "packageManager": "pnpm@9.10.0"
 }
