--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Nextra docs template",
   "scripts": {
     "dev": "next dev",
+    "lint": "next lint",
     "build": "next build",
     "start": "next start"
   },
@@ -26,6 +27,8 @@
   },
   "devDependencies": {
     "@types/node": "22.5.5",
+    "eslint": "8.57.1",
+    "eslint-config-next": "14.2.13",
     "typescript": "5.6.2"
   },
   "packageManager": "pnpm@9.10.0"
