--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Nextra docs template",
   "scripts": {
     "dev": "next dev",
-    "lint": "next lint",
+    "lint": "eslint .",
     "build": "next build",
     "start": "next start"
   },
@@ -29,7 +29,7 @@
     "@types/node": "22.5.5",
     "eslint": "8.57.1",
     "eslint-config-next": "14.2.13",
-    "typescript": "5.6.2"
+    "typescript": "5.5.4"
   },
   "packageManager": "pnpm@9.10.0"
 }
