--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "nextra": "2.13.4",
     "nextra-theme-docs": "2.13.4",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "sharp": "0.33.5"
   },
   "devDependencies": {
     "@types/node": "22.6.1",
