--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,5 +2,8 @@
   "extends": [
     "next/core-web-vitals",
     "next/typescript"
-  ]
+  ],
+  "rules": {
+    "react-hooks/rules-of-hooks": "off"
+  }
 }
