--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/shuding/nextra-docs-template#readme",
   "dependencies": {
+    "@vercel/analytics": "1.3.1",
     "next": "14.2.13",
     "nextra": "2.13.4",
     "nextra-theme-docs": "2.13.4",
