--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
   "extends": [
     "next/core-web-vitals",
-    "next/typescript"
+    "next/typescript",
+    "plugin:mdx/recommended"
   ],
   "rules": {
     "react-hooks/rules-of-hooks": "off",
