--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nextra-theme-docs": "3.0.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-icons": "5.3.0",
     "sharp": "0.33.5"
   },
   "devDependencies": {
