--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/shuding/nextra-docs-template#readme",
   "dependencies": {
     "@vercel/analytics": "1.3.1",
+    "@vercel/og": "0.6.3",
     "eslint-plugin-mdx": "3.1.5",
     "next": "14.2.14",
     "nextra": "3.0.7",
