--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "lint": "eslint .",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start"
   },
   "repository": {
@@ -34,6 +35,7 @@
     "@types/node": "22.7.5",
     "eslint": "8.57.1",
     "eslint-config-next": "14.2.15",
+    "next-sitemap": "4.2.3",
     "typescript": "5.6.3"
   },
   "packageManager": "pnpm@9.12.1"
