--- a/package.json
+++ b/package.json
@@ -1,42 +1,40 @@
 {
-  "name": "nextra-docs-template",
-  "version": "0.0.1",
-  "description": "Nextra docs template",
-  "scripts": {
-    "dev": "next dev",
-    "lint": "eslint .",
-    "build": "next build",
-    "postbuild": "next-sitemap",
-    "start": "next start"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/shuding/nextra-docs-template.git"
-  },
-  "author": "Shu Ding <g@shud.in>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/shuding/nextra-docs-template/issues"
-  },
-  "homepage": "https://github.com/shuding/nextra-docs-template#readme",
-  "dependencies": {
-    "@vercel/analytics": "1.3.1",
-    "@vercel/og": "0.6.3",
-    "eslint-plugin-mdx": "3.1.5",
-    "next": "14.2.15",
-    "nextra": "3.0.12",
-    "nextra-theme-docs": "3.0.12",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-icons": "5.3.0",
-    "sharp": "0.33.5"
-  },
-  "devDependencies": {
-    "@types/node": "22.7.5",
-    "eslint": "8.57.1",
-    "eslint-config-next": "14.2.15",
-    "next-sitemap": "4.2.3",
-    "typescript": "5.6.3"
-  },
-  "packageManager": "pnpm@9.12.1"
+	"name": "nextra-docs-template",
+	"version": "0.0.1",
+	"description": "Nextra docs template",
+	"scripts": {
+		"dev": "next dev",
+		"lint": "eslint .",
+		"build": "next build",
+		"postbuild": "next-sitemap",
+		"start": "next start"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/shuding/nextra-docs-template.git"
+	},
+	"author": "Shu Ding <g@shud.in>",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/shuding/nextra-docs-template/issues"
+	},
+	"homepage": "https://github.com/shuding/nextra-docs-template#readme",
+	"dependencies": {
+		"@vercel/analytics": "1.3.1",
+		"@vercel/og": "0.6.3",
+		"next": "14.2.15",
+		"nextra": "3.0.12",
+		"nextra-theme-docs": "3.0.12",
+		"react": "18.3.1",
+		"react-dom": "18.3.1",
+		"react-icons": "5.3.0",
+		"sharp": "0.33.5"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "1.9.3",
+		"@types/node": "22.7.5",
+		"next-sitemap": "4.2.3",
+		"typescript": "5.6.3"
+	},
+	"packageManager": "pnpm@9.12.1"
 }
