--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "Nextra docs template",
 	"scripts": {
 		"dev": "next dev",
-		"lint": "eslint .",
+		"biome:write": "biome check --write .",
+		"biome:ci": "biome check .",
 		"build": "next build",
 		"postbuild": "next-sitemap",
 		"start": "next start"
