--- a/biome.json
+++ b/biome.json
@@ -1,18 +1,18 @@
 {
-	"$schema": "https://biomejs.dev/schemas/1.9.3/schema.json",
-	"vcs": { "enabled": false, "clientKind": "git", "useIgnoreFile": false },
-	"files": {
-		"ignoreUnknown": false,
-		"ignore": ["node_modules", ".next", "public"]
-	},
-	"formatter": { "enabled": true, "indentStyle": "tab" },
-	"organizeImports": { "enabled": true },
-	"linter": {
-		"enabled": true,
-		"rules": {
-			"recommended": false,
-			"correctness": { "useHookAtTopLevel": "off" }
-		}
-	},
-	"javascript": { "formatter": { "quoteStyle": "double" } }
+  "$schema": "https://biomejs.dev/schemas/1.9.3/schema.json",
+  "vcs": { "enabled": false, "clientKind": "git", "useIgnoreFile": false },
+  "files": {
+    "ignoreUnknown": false,
+    "ignore": ["node_modules", ".next", "public"]
+  },
+  "formatter": { "enabled": true, "indentStyle": "space" },
+  "organizeImports": { "enabled": true },
+  "linter": {
+    "enabled": true,
+    "rules": {
+      "recommended": false,
+      "correctness": { "useHookAtTopLevel": "off" }
+    }
+  },
+  "javascript": { "formatter": { "quoteStyle": "double" } }
 }
