--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@biomejs/biome": "1.9.3",
     "@types/node": "22.7.5",
+    "lefthook": "1.7.18",
     "next-sitemap": "4.2.3",
     "typescript": "5.6.3"
   },
