--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/shuding/nextra-docs-template#readme",
   "dependencies": {
+    "@next/third-parties": "15.0.1",
     "@vercel/analytics": "1.3.1",
     "@vercel/og": "0.6.3",
     "next": "14.2.16",
