--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "@biomejs/biome": "1.9.4",
     "@types/node": "22.8.2",
     "lefthook": "1.9.2",
+    "linkinator": "6.1.2",
     "next-sitemap": "4.2.3",
+    "sitemapper": "3.2.18",
     "typescript": "5.7.2"
   },
   "packageManager": "pnpm@9.15.0"
