--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "lint": "biome check --write .",
     "build": "next build",
-    "postbuild": "next-sitemap",
+    "postbuild": "next-sitemap && pagefind --site .next/server/app --output-path public/_pagefind",
     "start": "next start"
   },
   "repository": {
@@ -37,6 +37,7 @@
     "lefthook": "1.10.10",
     "linkinator": "6.1.2",
     "next-sitemap": "4.2.3",
+    "pagefind": "1.3.0",
     "sitemapper": "3.2.20",
     "typescript": "5.7.3"
   },
