--- a/package.json
+++ b/package.json
@@ -40,5 +40,12 @@
     "sitemapper": "4.0.2",
     "typescript": "5.8.3"
   },
-  "packageManager": "pnpm@10.12.4"
+  "packageManager": "pnpm@10.12.4",
+  "pnpm": {
+    "overrides": {
+      "estree-util-value-to-estree@<3.3.3": ">=3.3.3",
+      "brace-expansion@>=2.0.0 <=2.0.1": ">=2.0.2",
+      "dompurify@<3.2.4": ">=3.2.4"
+    }
+  }
 }
