--- a/package.json
+++ b/package.json
@@ -40,5 +40,12 @@
     "sitemapper": "4.0.2",
     "typescript": "5.9.3"
   },
-  "packageManager": "pnpm@10.28.2+sha512.41872f037ad22f7348e3b1debbaf7e867cfd448f2726d9cf74c08f19507c31d2c8e7a11525b983febc2df640b5438dee6023ebb1f84ed43cc2d654d2bc326264"
+  "packageManager": "pnpm@10.28.2+sha512.41872f037ad22f7348e3b1debbaf7e867cfd448f2726d9cf74c08f19507c31d2c8e7a11525b983febc2df640b5438dee6023ebb1f84ed43cc2d654d2bc326264",
+  "pnpm": {
+    "overrides": {
+      "mdast-util-to-hast@>=13.0.0 <13.2.1": ">=13.2.1",
+      "lodash-es@>=4.0.0 <=4.17.22": ">=4.17.23",
+      "undici@>=7.0.0 <7.18.2": ">=7.18.2"
+    }
+  }
 }
