--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "overrides": {
       "mdast-util-to-hast@>=13.0.0 <13.2.1": ">=13.2.1",
       "lodash-es@>=4.0.0 <=4.17.22": ">=4.17.23",
-      "undici@>=7.0.0 <7.18.2": ">=7.18.2"
+      "undici@>=7.0.0 <7.18.2": ">=7.18.2",
+      "fast-xml-parser@>=4.3.6 <=5.3.3": ">=5.3.4",
+      "@isaacs/brace-expansion@<=5.0.0": ">=5.0.1"
     }
   }
 }
